<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_exercise_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/llRestView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tb_exercise_activity"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_get_ready"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_circular_color_accent_background">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_gray"
                android:indeterminate="false"
                android:max="10"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_accent_background"
            android:gravity="center">

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/tv_timer_default_number"/>

        </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llExerciseView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tb_exercise_activity"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">
        
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/iv_exercise_description"
            android:src="@drawable/ic_jumping_jacks"/>
        
        <TextView
            android:id="@+id/tvExerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_exercise_name"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_circular_color_accent_background">

            <ProgressBar
                android:id="@+id/progressBarExercise"
                android:layout_width="100dp"
                android:layout_height="100dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_gray"
                android:indeterminate="false"
                android:max="30"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90" />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvExerciseTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/tv_exercise_timer_default_number"/>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>